--- a/date/2024-09/page-2.htm
+++ b/date/2024-09/page-2.htm
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-6-4-node-share.htm" title="6月4日→20.5M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月4日→20.5M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-20-free-high-speed-nodes.htm" title="3月20日22.2M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接">3月20日22.2M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm" title="3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接">3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-22-free-node-subscribe.htm" title="6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-22-free-ssr-node.htm" title="10月22日→20.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月22日→20.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-3-9-free-clash-subscribe.htm" title="3月9日18.7M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接">3月9日18.7M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-26-free-node-subscribe-links.htm" title="5月26日→20.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">5月26日→20.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-9-clash-node.htm" title="7月9日→18.7M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">7月9日→18.7M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-5-free-ssr-subscribe.htm" title="5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-27-free-v2ray.htm" title="7月27日→18.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">7月27日→18.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-5-free-v2ray.htm" title="7月5日→21M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">7月5日→21M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-21-free-clash-subscribe.htm" title="6月21日→19M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">6月21日→19M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-22-free-node-subscribe.htm" title="3月22日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接">3月22日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-8-free-node-subscribe.htm" title="4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接">4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-4-free-clash.htm" title="9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-27-free-node-subscribe.htm" title="6月27日→20.2M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">6月27日→20.2M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-13-free-ssr-subscribe.htm" title="3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-15-node-share-links.htm" title="4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-11-clash-node-daily-updates.htm" title="9月11日→22.6M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">9月11日→22.6M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
