--- a/free-nodes/page-19.htm
+++ b/free-nodes/page-19.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-04-30">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-4-30-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="4月30日→19.3M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-4-30-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">4月30日→19.3M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了欧洲、香港、美国、日本、新加坡、韩国、加拿大等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-04-29">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-4-29-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -219,20 +233,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-04-20">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-4-20-free-subscribe-node.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/c38971d27f34eb1a1231acac753c4fee.webp" alt="4月20日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-4-20-free-subscribe-node.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">4月20日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了欧洲、加拿大、日本、新加坡、韩国、美国、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-18.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-16.htm">16</a></li><li><a href="/free-nodes/page-17.htm">17</a></li><li><a href="/free-nodes/page-18.htm">18</a></li><li class="active"><span>19</span></li><li><a href="/free-nodes/page-20.htm">20</a></li><li><a href="/free-nodes/page-21.htm">21</a></li><li><a href="/free-nodes/page-22.htm">22</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-24.htm">24</a></li><li><a href="/free-nodes/page-25.htm">25</a></li> <li><a href="/free-nodes/page-20.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -243,16 +243,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-7-24-clash-v2ray-ss-ssr.htm" title="7月24日→18.4M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">7月24日→18.4M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-1-free-shadowrocket-node.htm" title="11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-12-free-clash-subscribe.htm" title="9月12日→21.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">9月12日→21.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-21-clash-windows.htm" title="3月21日18.1M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月21日18.1M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-2-free-v2ray.htm" title="11月2日→18.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">11月2日→18.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-20-free-clash-subscribe.htm" title="5月20日→22.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">5月20日→22.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-20-clash-node.htm" title="8月20日→19.9M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">8月20日→19.9M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-3-clash-v2ray-ss-ssr.htm" title="8月3日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">8月3日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-3-19-clash-windows.htm" title="3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接">3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-8-free-node-subscribe-links.htm" title="6月8日→19.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">6月8日→19.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-15-node-share-links.htm" title="4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-29-node-share-links.htm" title="9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-7-7-clash-node-daily-updates.htm" title="7月7日→19.5M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">7月7日→19.5M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-16-node-share.htm" title="5月16日→22.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址">5月16日→22.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-18-free-clash.htm" title="6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-2-free-clash.htm" title="6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-30-free-shadowrocket-node.htm" title="5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-10-free-v2ray.htm" title="10月10日→19.1M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">10月10日→19.1M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
