--- a/free-nodes/page-7.htm
+++ b/free-nodes/page-7.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-09-03">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-9-3-free-ssr-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7be10a8674f96dee3b81e43500185f46.webp" alt="9月3日→18.1M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-9-3-free-ssr-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">9月3日→18.1M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、欧洲、美国、加拿大、新加坡、日本、韩国等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-09-02">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-9-2-free-shadowrocket-node.htm" class="xcblog-blog-url">
@@ -219,20 +233,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-08-24">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-8-24-clash-windows.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/1fe0e21ba1fc7b2413c5b6e668710c60.webp" alt="8月24日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-8-24-clash-windows.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">8月24日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了加拿大、欧洲、日本、韩国、美国、新加坡、香港等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-6.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li class="active"><span>7</span></li><li><a href="/free-nodes/page-8.htm">8</a></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-24.htm">24</a></li><li><a href="/free-nodes/page-25.htm">25</a></li> <li><a href="/free-nodes/page-8.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -243,16 +243,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-3-17-clash-v2ray-ss-ssr.htm" title="3月17日19.6M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接">3月17日19.6M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-26-free-node-subscribe-links.htm" title="4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接">4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-23-free-node-subscribe.htm" title="8月23日→19.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">8月23日→19.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-8-free-node-subscribe.htm" title="4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接">4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-3-5-free-clash.htm" title="3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接">3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-24-clash-v2ray-ss-ssr.htm" title="7月24日→18.4M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">7月24日→18.4M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-15-node-share-links.htm" title="4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-5-5-free-ssr-subscribe.htm" title="5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-18-clash-v2ray-ss-ssr.htm" title="9月18日→20M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">9月18日→20M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-27-node-share.htm" title="3月27日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接">3月27日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-16-clash-node-daily-updates.htm" title="3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接">3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-9-clash-node.htm" title="7月9日→18.7M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">7月9日→18.7M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-15-free-ssr-node.htm" title="9月15日→22.3M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">9月15日→22.3M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-26-free-node-subscribe-links.htm" title="4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接">4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-10-node-share-links.htm" title="3月10日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月10日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-24-clash-windows.htm" title="8月24日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">8月24日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-30-free-shadowrocket-node.htm" title="7月30日→20.3M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">7月30日→20.3M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-1-free-node-subscribe.htm" title="10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
