--- a/date/2024-03/page-2.htm
+++ b/date/2024-03/page-2.htm
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-5-17-shadowrocket-node.htm" title="5月17日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">5月17日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-18-free-node-subscribe.htm" title="7月18日→20.5M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">7月18日→20.5M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-6-free-ssr-node.htm" title="6月6日→18M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址">6月6日→18M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-30-free-shadowrocket-node.htm" title="10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-27-free-clash-subscribe.htm" title="10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-12-clash-windows.htm" title="4月12日→22.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接">4月12日→22.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-15-node-share-links.htm" title="6月15日→19.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">6月15日→19.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-27-clash-v2ray-ss-ssr.htm" title="4月27日→19.7M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接">4月27日→19.7M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-18-clash-windows.htm" title="10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-21-free-clash-subscribe.htm" title="6月21日→19M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">6月21日→19M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-19-free-v2ray-subscribe.htm" title="6月19日→19.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">6月19日→19.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-6-node-share.htm" title="5月6日→19.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">5月6日→19.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-16-clash-node-daily-updates.htm" title="9月16日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址">9月16日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-30-clash-node-daily-updates.htm" title="3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接">3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-26-clash-node-daily-updates.htm" title="6月26日→18M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">6月26日→18M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-12-free-ssr-node.htm" title="7月12日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">7月12日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-12-clash-node.htm" title="3月12日19.8M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接">3月12日19.8M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-21-free-clash.htm" title="5月21日→19.9M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">5月21日→19.9M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-24-free-node-subscribe.htm" title="10月24日→19.9M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐">10月24日→19.9M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-14-free-clash.htm" title="6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
