--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-10-17">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-10-17-node-share-links.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7fe0a3254708abdaf06a53e4d29ef007.webp" alt="10月17日→21.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-10-17-node-share-links.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">10月17日→21.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了日本、韩国、香港、美国、加拿大、欧洲、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-10-16">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-10-16-free-v2ray-subscribe.htm" class="xcblog-blog-url">
@@ -219,20 +233,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-10-07">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-10-7-node-share.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/7be10a8674f96dee3b81e43500185f46.webp" alt="10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-10-7-node-share.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">10月7日→20M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了香港、美国、加拿大、欧洲、日本、韩国、新加坡等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-24.htm">24</a></li><li><a href="/free-nodes/page-25.htm">25</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -243,16 +243,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-9-21-free-v2ray.htm" title="9月21日→18.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">9月21日→18.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-7-free-subscribe-node.htm" title="5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-16-free-node-subscribe.htm" title="8月16日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">8月16日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-9-node-share-links.htm" title="6月9日→18.9M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">6月9日→18.9M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-23-free-node-subscribe.htm" title="8月23日→19.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">8月23日→19.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-3-clash-v2ray-ss-ssr.htm" title="8月3日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">8月3日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-23-node-share-links.htm" title="7月23日→20.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">7月23日→20.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-21-free-node-subscribe-links.htm" title="10月21日→19.7M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐">10月21日→19.7M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-14-free-clash.htm" title="6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-31-clash-windows.htm" title="10月31日→18.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月31日→18.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-15-node-share-links.htm" title="4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-1-free-high-speed-nodes.htm" title="9月1日→22M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">9月1日→22M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-9-node-share.htm" title="8月9日→18.1M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">8月9日→18.1M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-25-free-ssr-node.htm" title="3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接">3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-20-free-subscribe-node.htm" title="7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-19-free-v2ray-subscribe.htm" title="6月19日→19.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">6月19日→19.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-11-shadowrocket-node.htm" title="4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-6-clash-node.htm" title="3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接">3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-14-free-ssr-subscribe.htm" title="7月14日→18.2M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">7月14日→18.2M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-2-free-subscribe-node.htm" title="5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
