--- a/index.html
+++ b/index.html
@@ -120,6 +120,20 @@
             	<h2 class="text-center" style="margin-block: 1rem;">最近更新文章</h2>
                 <!-- welcome -->
                 <div class="xcblog-blog-list">
+                                        <div class="welcome xcblog-blog-item" data-date="2024-11-06">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-11-6-clash-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/3465a82f9e0ee6212c3628015c6386cf.webp" alt="11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-11-6-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了欧洲、美国、香港、日本、韩国、加拿大、新加坡等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                         <div class="welcome xcblog-blog-item" data-date="2024-11-05">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-11-5-free-clash.htm" class="xcblog-blog-url">
@@ -386,20 +400,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                        <div class="welcome xcblog-blog-item" data-date="2024-10-17">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-10-17-node-share-links.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/7fe0a3254708abdaf06a53e4d29ef007.webp" alt="10月17日→21.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-10-17-node-share-links.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">10月17日→21.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了日本、韩国、香港、美国、加拿大、欧洲、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                                     </div>
                 <!-- //welcome -->
             </div>
@@ -410,16 +410,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-7-26-clash-windows.htm" title="7月26日→20.8M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">7月26日→20.8M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-25-free-node-subscribe.htm" title="10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-28-free-v2ray.htm" title="4月28日→21.8M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">4月28日→21.8M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-20-free-subscribe-node.htm" title="4月20日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接">4月20日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-13-free-ssr-subscribe.htm" title="3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-28-free-shadowrocket-node.htm" title="10月28日→20.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">10月28日→20.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-29-free-node-subscribe-links.htm" title="6月29日→22.4M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">6月29日→22.4M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-20-free-subscribe-node.htm" title="7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-31-shadowrocket-node.htm" title="8月31日→20M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">8月31日→20M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-4-free-clash.htm" title="9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-16-clash-node-daily-updates.htm" title="3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接">3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-12-free-high-speed-nodes.htm" title="10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-17-clash-v2ray-ss-ssr.htm" title="3月17日19.6M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接">3月17日19.6M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-28-free-subscribe-node.htm" title="8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-9-clash-windows.htm" title="9月9日→22.9M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">9月9日→22.9M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-18-free-ssr-subscribe.htm" title="3月18日20.1M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接">3月18日20.1M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-5-clash-node-daily-updates.htm" title="8月5日→19.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">8月5日→19.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-9-free-v2ray-subscribe.htm" title="4月9日→18.8M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月9日→18.8M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-24-clash-windows.htm" title="8月24日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">8月24日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-19-clash-windows.htm" title="3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接">3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -431,7 +431,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
