--- a/date/2024-07/page-2.htm
+++ b/date/2024-07/page-2.htm
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-15-node-share-links.htm" title="4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-13-free-ssr-subscribe.htm" title="3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm" title="3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接">3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-16-clash-node-daily-updates.htm" title="9月16日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址">9月16日→21.4M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-21-free-v2ray-subscribe.htm" title="7月21日→21.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">7月21日→21.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-27-free-node-subscribe.htm" title="6月27日→20.2M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">6月27日→20.2M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-1-free-high-speed-nodes.htm" title="9月1日→22M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">9月1日→22M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-13-clash-node.htm" title="10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-29-free-subscribe-node.htm" title="4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-20-free-clash-subscribe.htm" title="5月20日→22.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">5月20日→22.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-3-free-v2ray-subscribe.htm" title="3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接">3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-30-clash-node-daily-updates.htm" title="3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接">3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-16-free-shadowrocket-node.htm" title="7月16日→19.6M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">7月16日→19.6M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-5-free-ssr-subscribe.htm" title="5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-30-free-shadowrocket-node.htm" title="10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月30日→18M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-15-free-clash-subscribe.htm" title="8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-2-28-free-ssr-node.htm" title="2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接">2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-13-free-shadowrocket-node.htm" title="7月13日→22.3M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">7月13日→22.3M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-29-node-share-links.htm" title="9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-13-free-clash.htm" title="4月13日→20.9M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接">4月13日→20.9M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
