--- a/date/2024-09/page-2.htm
+++ b/date/2024-09/page-2.htm
@@ -245,15 +245,15 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-17-clash-node.htm" title="4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-8-node-share.htm" title="5月8日→21.2M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">5月8日→21.2M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-5-free-clash.htm" title="3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接">3月5日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-20-free-clash-subscribe.htm" title="5月20日→22.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">5月20日→22.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-2-free-clash.htm" title="6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-27-free-v2ray.htm" title="7月27日→18.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">7月27日→18.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-22-free-high-speed-nodes.htm" title="5月22日→20.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">5月22日→20.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-25-free-high-speed-nodes.htm" title="6月25日→21.4M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">6月25日→21.4M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-29-free-subscribe-node.htm" title="4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-6-free-node-subscribe.htm" title="7月6日→18.6M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址">7月6日→18.6M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-19-clash-windows.htm" title="3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接">3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-6-free-high-speed-nodes.htm" title="8月6日→20.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">8月6日→20.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-20-free-v2ray.htm" title="6月20日→20.4M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">6月20日→20.4M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-19-clash-node-daily-updates.htm" title="7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-14-free-clash.htm" title="6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-7-free-subscribe-node.htm" title="11月7日→19.8M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">11月7日→19.8M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-26-free-node-subscribe-links.htm" title="5月26日→20.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">5月26日→20.3M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-22-free-node-subscribe.htm" title="6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-3-20-free-high-speed-nodes.htm" title="3月20日22.2M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接">3月20日22.2M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</a></li>
                     </ul>
     </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
