--- a/free-nodes/page-11.htm
+++ b/free-nodes/page-11.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-07-29">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-7-29-free-subscribe-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/e257e01abd056413997dc08bd6b623fb.webp" alt="7月29日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-7-29-free-subscribe-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">7月29日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了加拿大、韩国、新加坡、欧洲、美国、香港、日本等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-07-28">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-7-28-free-ssr-subscribe.htm" class="xcblog-blog-url">
@@ -219,20 +233,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-07-19">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-7-19-clash-node-daily-updates.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/1fe0e21ba1fc7b2413c5b6e668710c60.webp" alt="7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-7-19-clash-node-daily-updates.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了加拿大、日本、欧洲、新加坡、香港、美国、韩国等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-10.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-8.htm">8</a></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li class="active"><span>11</span></li><li><a href="/free-nodes/page-12.htm">12</a></li><li><a href="/free-nodes/page-13.htm">13</a></li><li><a href="/free-nodes/page-14.htm">14</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-24.htm">24</a></li><li><a href="/free-nodes/page-25.htm">25</a></li> <li><a href="/free-nodes/page-12.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -243,16 +243,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-3-25-free-ssr-node.htm" title="3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接">3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-17-node-share.htm" title="7月17日→21.2M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">7月17日→21.2M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-15-free-clash-subscribe.htm" title="8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-22-free-ssr-node.htm" title="10月22日→20.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月22日→20.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-1-clash-windows.htm" title="6月1日→20.1M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">6月1日→20.1M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-3-clash-v2ray-ss-ssr.htm" title="8月3日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">8月3日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-9-node-share-links.htm" title="6月9日→18.9M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">6月9日→18.9M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-19-clash-node.htm" title="9月19日→19.5M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">9月19日→19.5M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-7-free-v2ray-subscribe.htm" title="9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-16-clash-node-daily-updates.htm" title="3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接">3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-14-free-clash.htm" title="6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-29-free-node-subscribe-links.htm" title="6月29日→22.4M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">6月29日→22.4M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-29-shadowrocket-node.htm" title="10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-30-node-share-links.htm" title="8月30日→19M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">8月30日→19M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-29-node-share-links.htm" title="9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-2-29-clash-node.htm" title="2月29日20.8M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接">2月29日20.8M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-1-free-high-speed-nodes.htm" title="9月1日→22M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">9月1日→22M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-10-node-share.htm" title="6月10日→20.2M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">6月10日→20.2M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-20-free-subscribe-node.htm" title="7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-26-free-node-subscribe-links.htm" title="4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接">4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
