--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-10-29">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-10-29-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/ba657eb869fd73b341be034765bf0ac4.webp" alt="10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-10-29-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了加拿大、日本、香港、美国、新加坡、韩国、欧洲等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-10-28">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-10-28-free-shadowrocket-node.htm" class="xcblog-blog-url">
@@ -219,20 +233,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-10-19">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-10-19-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-10-19-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了欧洲、加拿大、新加坡、日本、美国、韩国、香港等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-24.htm">24</a></li><li><a href="/free-nodes/page-25.htm">25</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -243,16 +243,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-7-31-free-clash-subscribe.htm" title="7月31日→22.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">7月31日→22.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-25-free-high-speed-nodes.htm" title="8月25日→22.5M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">8月25日→22.5M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-24-shadowrocket-node.htm" title="9月24日→18M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">9月24日→18M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-27-free-node-subscribe.htm" title="6月27日→20.2M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">6月27日→20.2M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-10-clash-node-daily-updates.htm" title="9月10日→20.7M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">9月10日→20.7M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-4-free-clash.htm" title="10月4日→18.1M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">10月4日→18.1M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-4-clash-v2ray-ss-ssr.htm" title="3月4日21.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接">3月4日21.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-12-free-ssr-subscribe.htm" title="8月12日→19.7M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">8月12日→19.7M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-23-node-share-links.htm" title="7月23日→20.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">7月23日→20.7M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-16-node-share.htm" title="5月16日→22.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址">5月16日→22.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-9-clash-windows.htm" title="9月9日→22.9M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">9月9日→22.9M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-13-clash-v2ray-ss-ssr.htm" title="6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-15-node-share-links.htm" title="3月15日19.6M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接">3月15日19.6M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-1-free-node-subscribe.htm" title="10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-11-free-high-speed-nodes.htm" title="3月11日20.6M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接">3月11日20.6M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-5-free-v2ray.htm" title="7月5日→21M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">7月5日→21M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-21-free-subscribe-node.htm" title="4月21日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月21日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-16-free-node-subscribe.htm" title="8月16日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">8月16日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-17-free-v2ray.htm" title="6月17日→18M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">6月17日→18M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-27-free-v2ray.htm" title="7月27日→18.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">7月27日→18.9M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">7</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
